# fake_m

./: pyproject.toml
.github/workflows/: fake_pubsub_m-docker-image-publish.yaml
docker/: Dockerfile
fake_pubsub_m/: __main__.py  configs.py  version.json
tests/: test_main.py
